<resources>
    <string name="app_name">cedri-app</string>
    <string name="tela_menu_name">MENU</string>
    <string name="tela_procura_name">SEARCH</string>
    <string name="itemMenuDashboard">DASHBOARD</string>
    <string name="itemMenuProcurar">SEARCH</string>
    <string name="itemMenuAprovacoes">APPROVALS</string>
    <string name="itemMenuMeusTrabalhos">MY WORKS</string>
    <string name="tela_perfil_name">AUTHOR</string>
    <string name="tela_revisao_artigo_name">REVIEW</string>
    <string name="tela_todos_artigos_name">ARTICLES</string>
    <string name="titulo_artigo">ARTICLE TITLE</string>
    <string name="itemMenuConfiguracoes">SETTINGS</string>
    <string name="article_review_url_button">Link Project</string>


    <string name="exemploAbstract">A aprendizagem por reforço está revolucionando a inteligência artificial, isso
        representa que
        sistemas autônomos estão compreendendo cada vez mais o mundo visual. A aprendizagem
        por reforço é uma das abordagens de aprendizagem de máquina que funciona alterando o
        comportamento do agente por meio de feedbacks, como recompensas ou penalidades por suas
        ações. A aprendizagem por reforço está revolucionando a inteligência artificial, isso representa que
        sistemas autônomos estão compreendendo cada vez mais o mundo visual. A aprendizagem
        por reforço é uma das abordagens de aprendizagem de máquina que funciona alterando o
        comportamento do agente por meio de feedbacks, como recompensas ou penalidades por suas
        ações. A aprendizagem por reforço está revolucionando a inteligência artificial, isso representa que
        sistemas autônomos estão compreendendo cada vez mais o mundo visual. A aprendizagem
        por reforço é uma das abordagens de aprendizagem de máquina que funciona alterando o
        comportamento do agente por meio de feedbacks, como recompensas ou penalidades por suas
        ações.
    </string>
    <string name="chart_preview_image">chart</string>

    <!--menu activity start-->
    <string name="menu_card_item_button_name">%1$s</string>
    <string name="menu_title">%1$s</string>
    <!--menu activity end-->

    <!--setting toolbar start-->
    <string name="menu_bar_titles_chart_list_screen">CHARTS</string>
    <string name="menu_bar_titles_outcomes_chart_screen">TOTAL OUTCOMES</string>
    <string name="menu_bar_titles_bar_chart_screen">MY %1$s</string>
    <string name="menu_bar_title_work_card_list_screen">MY WORKS</string>
    <string name="menu_bar_title_specific_work">MY 1$s</string>

    <string name="toolbar_back_image_content_description">Click to go back</string>
    <string name="toolbar_avatar_image_content_description">Click to see your profile</string>
    <!--setting toolbar end-->

    <!-- my awards start -->
    <string name="my_award_item_title">%1$s</string>
    <string name="my_award_item_event">%1$s (%2$s)</string>
    <!-- my awards end -->

    <!-- my intellectual properties start -->
    <string name="my_intellectual_property_item_title">%1$s</string>
    <string name="my_intellectual_property_item_type">%1$s</string>
    <!-- my intellectual properties end -->

    <!-- my software start -->
    <string name="my_software_item_title">%1$s</string>
    <!-- my software end -->

    <!-- my patents start -->
    <string name="my_patent_item_title">%1$s</string>
    <!-- my patents end -->

    <!-- my projects start -->
    <string name="my_project_item_title">%1$s</string>
    <string name="my_project_item_type">%1$s (%2$s - %3$s)</string>
    <!-- my projects end -->

    <!-- my publications start -->
    <string name="my_publication_item_title">%1$s</string>
    <string name="my_publication_item_type">%1$s (%2$s)</string>
    <!-- my publications end -->

    <!-- my theses start -->
    <string name="my_these_item_title">%1$s</string>
    <string name="my_these_item_type">%1$s (%2$s)</string>
    <!-- my theses end -->
</resources>
